fix: it was hard to write, so it should be hard to read

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'CaskaydiaMono Nerd Font';
+  font-family: 'JetBrainsMono Nerd Font';
   font-size: 15px;
 }
 
@@ -31,6 +31,7 @@
 }
 
 #cpu,
+#memory,
 #battery,
 #pulseaudio,
 #custom-omarchy,
